--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Real Estate Manager</string>
     <string name="title_property_list">Properties</string>
     <string name="title_property_detail">Property Detail</string>
+    <string name="real_estate_manager">Real Estate Manager</string>
 </resources>
