- update AuthActivity.kt -> update firebase code in order to not use deprecated method onActivityResult
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_property_list">Properties</string>
     <string name="title_property_detail">Property Detail</string>
     <string name="real_estate_manager">Real Estate Manager</string>
+    <string name="connection_succeed">Connection succeed</string>
 </resources>
