- update AuthActivity.kt -> update firebase code in order to not use deprecated method onActivityResult - add on result method as well. - change name of PropertyListActivity.kt into MainActivity.kt
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_property_detail">Property Detail</string>
     <string name="real_estate_manager">Real Estate Manager</string>
     <string name="connection_succeed">Connection succeed</string>
+    <string name="error_no_internet">No Internet</string>
+    <string name="error_unknown_error">Unknown error</string>
 </resources>
