--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">Real Estate Manager</string>
-    <string name="title_property_list">Properties</string>
+    <string name="title_property_list">Property List</string>
+    <string name="title_properties_map">Properties Map</string>
     <string name="title_property_detail">Property Detail</string>
     <string name="real_estate_manager">Real Estate Manager</string>
     <string name="connection_succeed">Connection succeed</string>
     <string name="error_no_internet">No Internet</string>
     <string name="error_unknown_error">Unknown error</string>
     <string name="price">Price</string>
+    <string name="list">List</string>
+    <string name="map">Map</string>
 </resources>
