- Remove bottom navigation view and replaced it by bottom app bar
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="price">Price</string>
     <string name="list">List</string>
     <string name="map">Map</string>
+    <string name="search">Search</string>
+    <string name="more">More</string>
+    <string name="add_property_button">Add property button</string>
 </resources>
