--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="add_property_button">Add property button</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
+    <string name="select_a_property_type">Select property type</string>
+    <string name="property_type">Type</string>
 </resources>
