--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="edit">Edit</string>
     <string name="select_a_property_type">Select property type</string>
     <string name="property_type">Type</string>
+    <string name="address">Address</string>
+    <string name="address">Address</string>
+    <string name="address2">Address2</string>
 </resources>
