--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,11 @@
     <string name="select_a_property_type">Select property type</string>
     <string name="property_type">Type</string>
     <string name="address">Address</string>
-    <string name="address">Address</string>
     <string name="address2">Address2</string>
+    <string name="description">Description</string>
+    <string name="united_state">United State</string>
+    <string name="country">Country</string>
+    <string name="state">State</string>
+    <string name="city">City</string>
+    <string name="zipcode">Zipcode</string>
 </resources>
