--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="state">State</string>
     <string name="city">City</string>
     <string name="zipcode">Zipcode</string>
+    <string name="characteristics">Characteristics</string>
 </resources>
