--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,8 @@
     <string name="city">City</string>
     <string name="zipcode">Zipcode</string>
     <string name="characteristics">Characteristics</string>
+    <string name="bedrooms">Bedrooms</string>
+    <string name="bathroom">Bathroom</string>
+    <string name="rooms">Rooms</string>
+    <string name="surface">Surface</string>
 </resources>
