- update PropertyAdapter.kt && PhotosAdapter.kt     - add linearLayout to recyclerview in layout
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="camera_upload">Camera upload</string>
     <string name="upload_video">Upload video</string>
     <string name="upload_photo">Upload photo</string>
+    <string name="property_picture">Property picture</string>
 </resources>
