add delete icon to property gallery chosen
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,6 @@
     <string name="phone_upload">Phone upload</string>
     <string name="camera_upload">Camera upload</string>
     <string name="upload_video">Upload video</string>
-    <string name="upload_photo">Upload photo</string>
+    <string name="upload_photo">Add picture</string>
     <string name="property_picture">Property picture</string>
 </resources>
