- update saveProperty method in AddPropertyFragment.kt
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="sold_since">Sold since</string>
     <string name="sold_date">Sold date</string>
     <string name="sold">Sold</string>
+    <string name="area">Area</string>
 </resources>
