--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="sold_date">Sold date</string>
     <string name="sold">Sold</string>
     <string name="area">Area</string>
+    <string name="property_image_view">Property Image View</string>
 </resources>
