--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,9 @@
     <string name="area">Area</string>
     <string name="property_image_view">Property Image View</string>
     <string name="address2_layout">%1$s, %2$s,%3$s, %4$s</string>
+    <plurals name="room_plural">
+        <item quantity="one">1 room</item>
+        <item quantity="other">%d rooms</item>
+    </plurals>
+    <string name="surface_text">%d m²</string>
 </resources>
