- update layout property_detail.xml -> add nearby icons
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
         <item quantity="other">%d baths</item>
     </plurals>
     <string name="surface_text">%d m²</string>
+    <string name="nearby">Nearby:</string>
 </resources>
