- add property data to media_layout.xml - update saveProperty method in AddPropertyFragment.kt
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     </plurals>
     <string name="surface_text">%d m²</string>
     <string name="nearby">Nearby:</string>
+    <string name="location">Localisation</string>
 </resources>
