--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,5 +66,7 @@
     <string name="nearby">Nearby:</string>
     <string name="location">Localisation: </string>
     <string name="mapbox_access_token">pk.eyJ1IjoiZG9jbWFidXNlIiwiYSI6ImNrb3gza3d1YTA0emkycm1jZDRhZzRrdmgifQ.wzrFHkZdVf8D-FM0SOSbGw</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
