--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,7 @@
     <string name="mapbox_access_token">pk.eyJ1IjoiZG9jbWFidXNlIiwiYSI6ImNrb3gza3d1YTA0emkycm1jZDRhZzRrdmgifQ.wzrFHkZdVf8D-FM0SOSbGw</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="user_location_permission_explanation">You need to nebale permission in order to use the app. The app will display properties around you.</string>
+    <string name="user_location_permission_not_granted">Location permission is not granted</string>
 
 </resources>
