--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,9 +66,8 @@
     <string name="nearby">Nearby:</string>
     <string name="location">Localisation: </string>
     <string name="mapbox_access_token">pk.eyJ1IjoiZG9jbWFidXNlIiwiYSI6ImNrb3gza3d1YTA0emkycm1jZDRhZzRrdmgifQ.wzrFHkZdVf8D-FM0SOSbGw</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="user_location_permission_explanation">You need to nebale permission in order to use the app. The app will display properties around you.</string>
+    <string name="user_location_permission_explanation">You need to enable permission in order to use the app. The app will display properties around you.</string>
     <string name="user_location_permission_not_granted">Location permission is not granted</string>
 
 </resources>
