--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="user_location_permission_explanation">You need to enable permission in order to use the app. The app will display properties around you.</string>
     <string name="user_location_permission_not_granted">Location permission is not granted</string>
+    <string name="search_an_address">Search an address</string>
 
 </resources>
