- update point_of_interest_layout.xml
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="bathroom">Bathroom</string>
     <string name="rooms">Rooms</string>
     <string name="surface">Surface</string>
-    <string name="parcs">Parc</string>
+    <string name="park">Park</string>
     <string name="hospital">Hospital</string>
     <string name="shops">Shop</string>
     <string name="schools">School</string>
