- update characteristics_layout.xml & price_layout.xml in order to not display null if result is null
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="bedrooms">Bedrooms</string>
     <string name="bathroom">Bathroom</string>
     <string name="rooms">Rooms</string>
-    <string name="surface">Surface (m²)</string>
+    <string name="surface">Surface sq m)</string>
     <string name="park">Park</string>
     <string name="hospital">Hospital</string>
     <string name="shops">Shop</string>
