- update add_agent_fragment.xml
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,6 @@
     <string name="some_err">some error</string>
     <string name="agent_picture">AgentPicture</string>
     <string name="name">Name</string>
+    <string name="email">Email</string>
 
 </resources>
