- update daos and repositories in order to manage get Propertyt and Agent.kt by id
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,5 +78,6 @@
     <string name="agent_picture">AgentPicture</string>
     <string name="name">Name</string>
     <string name="email">Email</string>
+    <string name="empty_task_message">Agents cannot be empty</string>
 
 </resources>
