- add snackbar message on add agent fab click if fields are empty
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,5 +79,6 @@
     <string name="name">Name</string>
     <string name="email">Email</string>
     <string name="empty_task_message">Agents cannot be empty</string>
+    <string name="phone">Phone</string>
 
 </resources>
