- update AddEditPropertyViewModel.kt
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,7 +78,9 @@
     <string name="agent_picture">AgentPicture</string>
     <string name="name">Name</string>
     <string name="email">Email</string>
-    <string name="empty_task_message">Agents cannot be empty</string>
+    <string name="empty_agent_message">Agents cannot be empty</string>
+    <string name="empty_property_message">Properties cannot be empty</string>
+
     <string name="phone">Phone</string>
 
 </resources>
