--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,8 @@
     <string name="empty_property_message">Properties cannot be empty</string>
 
     <string name="phone">Phone</string>
+    <string name="agent_in_charge">Agent in Charge</string>
+    <string name="select_agent_in_charge">Select agent in charge</string>
+    <string name="dates">Dates</string>
 
 </resources>
