--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="bedrooms">Bedrooms</string>
     <string name="bathroom">Bathroom</string>
     <string name="rooms">Rooms</string>
-    <string name="surface">Surface sq m)</string>
+    <string name="surface">Surface sq m</string>
     <string name="park">Park</string>
     <string name="hospital">Hospital</string>
     <string name="shops">Shop</string>
@@ -72,7 +72,7 @@
     <string name="search_an_address">Search an address</string>
     <string name="engine_init_error">Init error</string>
     <string name="file_provider_name">.fileprovider</string>
-    <string name="select_capture_image"><![CDATA[>Please select or capture image]]></string>
+    <string name="select_capture_image"><![CDATA[Please select or capture image]]></string>
     <string name="permission_not_granted">Permission not granted</string>
     <string name="some_err">some error</string>
     <string name="agent_picture">AgentPicture</string>
@@ -80,7 +80,6 @@
     <string name="email">Email</string>
     <string name="empty_agent_message">Agents cannot be empty</string>
     <string name="empty_property_message">Properties cannot be empty</string>
-
     <string name="phone">Phone</string>
     <string name="agent_in_charge">Agent in Charge</string>
     <string name="select_agent_in_charge">Select agent in charge</string>
