--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,6 @@
     <string name="agent_in_charge">Agent in Charge</string>
     <string name="select_agent_in_charge">Select agent in charge</string>
     <string name="dates">Dates</string>
+    <string name="agent">Agent:</string>
 
 </resources>
