--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,6 @@
     <string name="price">Price</string>
     <string name="list">List</string>
     <string name="map">Map</string>
-    <string name="search">Search</string>
     <string name="more">More</string>
     <string name="add_property_button">Add property button</string>
     <string name="delete">Delete</string>
@@ -90,5 +89,6 @@
     <string name="search">Search</string>
     <string name="sort_by_name">Sort by name</string>
     <string name="sort_by_date_on_market">Sort by date on market</string>
+    <string name="filtered">Filtered</string>
 
 </resources>
