--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,5 +97,6 @@
     <string name="penthouse">Penthouse</string>
     <string name="manor">Manor</string>
     <string name="all">All</string>
+    <string name="apply">Apply</string>
 
 </resources>
