update image name ion property_item_layout.xml image photo
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,5 +98,6 @@
     <string name="manor">Manor</string>
     <string name="all">All</string>
     <string name="apply">Apply</string>
+    <string name="empty_property_message2">Property cannot be empty</string>
 
 </resources>
