--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,5 +99,6 @@
     <string name="all">All</string>
     <string name="apply">Apply</string>
     <string name="empty_property_message2">Property cannot be empty</string>
+    <string name="select_an_area">Select an area</string>
 
 </resources>
