update soldDate query in PropertyDao.kt && today date in millescond in date utils
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,5 +100,7 @@
     <string name="apply">Apply</string>
     <string name="empty_property_message2">Property cannot be empty</string>
     <string name="select_an_area">Select an area</string>
+    <string name="reset">Reset</string>
+    <string name="loft">Loft</string>
 
 </resources>
