--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,5 +102,6 @@
     <string name="select_an_area">Select an area</string>
     <string name="reset">Reset</string>
     <string name="loft">Loft</string>
+    <string name="sort_by_price">Sort by price</string>
 
 </resources>
