--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
         <item quantity="other">%d baths</item>
     </plurals>
     <string name="surface_text">%d m²</string>
-    <string name="nearby">Nearby:</string>
+    <string name="nearby">Nearby</string>
     <string name="location">Localisation: </string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="user_location_permission_explanation">You need to enable permission in order to use the app. The app will display properties around you.</string>
