--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,5 +104,6 @@
     <string name="loft">Loft</string>
     <string name="sort_by_price">Sort by price</string>
     <string name="close">Close</string>
+    <string name="number_of_pics">Number of pictures</string>
 
 </resources>
