--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,7 +90,7 @@
     <string name="sort_by_name">Sort by name</string>
     <string name="sort_by_date_on_market_asc">Sort by date on market ASC</string>
     <string name="sort_by_date_on_market_dsc">Sort by date on market DESC</string>
-
+    <string name="edit_property">Edit property</string>
     <string name="filtered">Filtered</string>
     <string name="filters">Filters:</string>
     <string name="house">House</string>
