add currency change on click in MainActivity.kt appbar
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,5 +111,6 @@
     <string name="fab_add">Fab add</string>
     <string name="sort_by_price_dsc">Sort By Price DSC</string>
     <string name="sort_by_price_asc">Sort by price ASC</string>
+    <string name="currency_choose">Choose currency</string>
 
 </resources>
