--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
     <string name="email">Email</string>
     <string name="empty_agent_message">Agents cannot be empty</string>
     <string name="empty_property_message">Properties cannot be empty</string>
+    <string name="empty_loan_message">Loan fields cannot be empty</string>
     <string name="phone">Phone</string>
     <string name="agent_in_charge">Agent in Charge</string>
     <string name="select_agent_in_charge">Select agent in charge</string>
@@ -116,7 +117,7 @@
     <string name="property_price">Property price</string>
     <string name="interest_rate">Interest rate</string>
     <string name="loan_term">Loan term in year</string>
-    <string name="loanResult">Your mortgage payments over %1$s years will add up to $ %3$s. Estimated monthly payment:$ %3$s</string>
-    <string name="calcul_loan">Calculate loan</string>
+    <string name="loanResult">Your mortgage payments over %1$s years will add up to $%3$s. Estimated monthly payment:$%3$s</string>
+    <string name="calculate_loan">Simulate loan</string>
 
 </resources>
