--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,6 @@
     <string name="property_price">Property price</string>
     <string name="interest_rate">Interest rate in %</string>
     <string name="loan_term">Loan term in year</string>
-    <string name="loanResult">Your mortgage payments over %1$s years will add up to $%3$s. Estimated monthly payment: $%3$s</string>
+    <string name="loanResult">Your mortgage payments over %1$s years will add up to %2$s. Estimated monthly payment: %3$s</string>
     <string name="calculate_loan">Simulate loan</string>
 </resources>
