update detail and list views
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,5 @@
     <string name="loan_term">Loan term in year</string>
     <string name="loanResult">Your mortgage payments over %1$s years will add up to %2$s. Estimated monthly payment: %3$s</string>
     <string name="calculate_loan">Simulate loan</string>
+    <string name="no_property_yet">No property yet.</string>
 </resources>
