--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,7 +119,7 @@
     <string name="loan_term">Loan term in year</string>
     <string name="loanResult">Your mortgage payments over %1$s years will add up to %2$s. Estimated monthly payment: %3$s</string>
     <string name="calculate_loan">Simulate loan</string>
-    <string name="no_property_yet">No property yet.</string>
+    <string name="no_property_yet">Nothing to show.</string>
     <string name="add_a_new_agent">Add a new agent</string>
     <string name="add_a_new_property">Add a new property</string>
     <string name="add_button">Add button</string>
